sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:15: error: not found: value FarColor
      if (color1==FarColor){
                  ^NaiveBaseball:16: error: not found: value i
        move(i,1)
             ^NaiveBaseball:19: error: not found: value i
        move(i,0)
             ^